--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ jobs:
           npm install
           npm run build
 
-      - name: Build and Deploy
+      - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@3.5.7
-        env:
-          ACCESS_TOKEN: ${{ secrets.ACCESS_TOKEN }}
+        with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           BRANCH: master
           FOLDER: dist
