--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "vue-cli-service serve",
     "build": "vue-cli-service build"
   },
-  "homepage": "https://redbuck.github.io/github-actions-demo",
+  "homepage": "https://xty1992a.github.io/github-actions-demo",
   "dependencies": {
     "core-js": "^3.6.4",
     "dayjs": "^1.8.24",
